[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "micro-workflow-manager"
version = "0.1.4"
description = "A small file-backed workflow manager for node-based Python jobs."
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
mwf = "micro_workflow_manager.cli:main"
