[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "micro-workflow-manager"
version = "0.1.9"
description = "A small file-backed workflow manager for node-based Python jobs."
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
mwf = "micro_workflow_manager.cli:main"

[tool.pytest.ini_options]
addopts = "-m 'not stress' -p no:ddtrace"
markers = [
    "stress: long-running cyclic autostart scheduler tests",
]
filterwarnings = [
    "error",
]
